--- a/css/mobile.css
+++ b/css/mobile.css
@@ -91,7 +91,7 @@ nav{
 }
 
 .gnb > li{
-    border-bottom: 2px solid #f0f0f4;
+    border-bottom: 2px solid #f1f1f5;
     width: 100%;
     padding: 30px 0 10px 0;
 }
@@ -104,7 +104,7 @@ nav{
 }
 .gnb .subtitle li{
     padding: 20px 0 10px 0;
-    border-bottom: 1px solid #f0f0f4;
+    border-bottom: 1px solid #f1f1f5;
     position: relative;
 }
 .subtitle li:hover input{color: #e10b2a;}
@@ -408,7 +408,9 @@ footer{
     justify-content: space-between;
     margin: 32px 0;
     color: #fff;
+    flex-wrap: wrap;
 }
+
 address{ font-style: normal; color: #767676;}
 address p{ margin-bottom: 16px;}
 address span::after{
@@ -472,8 +474,8 @@ address span::after{
 .fmenubar{
     background-color: #e10b2a;
     position: fixed;
-    bottom: 2%;
-    right: 1%;
+    bottom: 6%;
+    right: 3%;
     z-index: 90;
 }
 .fmenubar img.on{
@@ -484,8 +486,8 @@ address span::after{
 .fbarList{
     display: none;
     position: fixed;
-    bottom: calc(50px + 2%);
-    right: 1%;
+    bottom: calc(50px + 6%);
+    right: 3%;
     z-index: 90;
 }
 .fbarList li a{
