--- a/css/reset.css
+++ b/css/reset.css
@@ -10,15 +10,19 @@ ul{ list-style: none;}
 a{
     color: inherit; 
     text-decoration: none;
-    
     display: block;
     height: 100%;
 }
 img{ vertical-align: top;}
 button{ background-color: transparent; border: 0;}
 
-html{font-family: 'SUITE-Regular'; font-size: 14px;}
 p{color: #767676;}
+body{
+    min-width: 360px;
+    font-family: 'SUITE-Regular';
+    font-size: 14px;
+    color: #121212;
+}
 
 /*내용 */
 section{margin-top: 60px;}
@@ -34,4 +38,5 @@ section .subtxt{ margin-top: 16px; margin-bottom: 32px;}
 h2{ font-size: 28px; margin-bottom: 16px;}
 h3{ font-size: 26px; }
 h3 a{display: inline;}
+h4{font-size: 16px;}
 
