--- a/css/pc.css
+++ b/css/pc.css
@@ -5,7 +5,7 @@
     main{background-color: #1f1c1a;}
     .mpic{
         height: 600px;
-        background-image: url(../imges/bbg.png);
+        background-image: url(../imges/bbg.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
